# database-reactivation

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
dbreactivation/: __init__.py  cli.py  intake.py  lifecycle.py  models.py  normalize.py  ranking.py  readiness.py  scheduler.py
docs/: DEMO.md  HOOKS.md  LAUNCH_PACK.md  RANKING.md  RANKING_LOGIC.md  REPO_HEALTH.md  SCHEDULER.md  SCORING.md
examples/: README.md  config.json  leads.csv  leads.json  outcomes.json  sample_ads.json  sample_leads.csv  suppression.txt
tests/: test_cli.py  test_intake.py  test_lifecycle.py  test_normalize.py  test_ranking.py  test_readiness.py  test_scheduler.py
